# flowerpower

./: .gitignore  .hlint.yaml  HotApi.sh  HotBackend.sh  HotBackendStart.sh  HotData.sh  HotFrontend.sh  cabal.project  default.nix  docker.nix  site.nix
fht-api/: .dir-locals.el  fht-api.cabal
fht-api/src/Api/: Version.hs
fht-api/src/Api/Garden/: Plant.hs
fht-backend/: .dir-locals.el  README.org  fht-backend.cabal
fht-backend/api/: rest.http
fht-backend/db/migrations/1605685097.initial/: upgrade.sql
fht-backend/db/migrations/1605969330.timeplanted/: upgrade.sql
fht-backend/db/migrations/1605971702.fix-enum-typo/: upgrade.sql
fht-backend/db/migrations/1606558487.logstable/: upgrade.sql  upgrade.txt
fht-backend/src/: Main.hs
fht-backend/src/Backend/: Api.hs  Runtime.hs
fht-backend/src/Backend/Api/Garden/: Plant.hs
fht-backend/src/Backend/Garden/: Plant.hs
fht-backend/src/Backend/Garden/Plant/: Logs.hs  Orphans.hs  Types.hs
fht-data/: .dir-locals.el  fht-data.cabal
fht-data/src/Control/: Error.hs  Log.hs
fht-data/src/Data/: Coordinate.hs  Property.hs
fht-data/src/Data/Garden/: Plant.hs
fht-data/src/Data/Property/: Garden.hs
fht-data/src/Data/Property/Garden/: Plant.hs
fht-data/test/: .dir-locals.el
fht-data/test/Data/Garden/: PlantSpec.hs
fht-frontend/: .dir-locals.el  fht-frontend.cabal
fht-frontend/src/: Frontend.hs  Main.hs
fht-frontend/src/Frontend/: Nav.hs  Shared.hs
fht-frontend/src/Frontend/Garden/: Plant.hs
fht-frontend/src/Frontend/Shared/: Widgets.hs
fht-frontend/src/Frontend/Shared/Widgets/: Bulma.hs
fht-frontend/src/Frontend/Shared/Widgets/Bulma/: Forms.hs
fht-frontend/src/Lib/Reflex/: Buttons.hs  Clicks.hs
nix/: sources.json
