cabal-version:      >=1.10
name:               fht-backend
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Ashesh Ambasta
maintainer:         ashesh@asheshambasta.com
build-type:         Simple
extra-source-files: README.org

executable fht-backend
  hs-source-dirs:     src
  build-depends:
      base-noprelude 
    , text
    , prelude-polysemy
    , containers
    , lens
    , data-default-class
    -- dependencies from within the project.
    , fht-data 
    , fht-api
    -- Servant stuff.
    , servant 
    , servant-server 
    -- Effects
    , polysemy
    -- DB related
    , opaleye
    , resource-pool 
    , postgresql-simple 
    , product-profunctors 
    , monad-log 
    -- generate ids
    , snowflake 
    
  main-is: Main.hs
    
  other-modules: 
    Backend.Garden.Plant 

  default-extensions:
    DataKinds
    FlexibleContexts
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    GADTs 
    TypeFamilies
    DerivingVia 
    RecordWildCards
    PackageImports
    ViewPatterns

  ghc-options:        -Wall -threaded -Wno-unused-do-bind

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

  default-language:   Haskell2010

  if os(osx)
    ghc-options: -dynamic
