cabal-version:      >=1.10
name:               fht-frontend
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
author:             Ashesh Ambasta
maintainer:         ashesh@asheshambasta.com
build-type:         Simple
extra-source-files: README.md

executable fht-frontend
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:
      base
    , reflex
    , reflex-dom
    , reflex-dom-helpers == 0.2.0.2
    , jsaddle-warp
    , bulmex 
    -- network-uri is a depedency for bulma. HeadSettings uses types from it.
    -- https://hackage.haskell.org/package/bulmex-4.0.0/docs/Reflex-Bulmex-Html.html#t:HeadSettings
    -- , network-uri
    , text
    , protolude 
    , containers
    , lens
    , data-default-class
    , time 
    , witherable
    -- the frontend needs the data types. 
    , fht-data
    -- and the API for client functions.
    , fht-api
    
  other-modules: 
    Frontend.Shared
    Frontend.Nav
    Frontend.Shared.Widgets
    Frontend.Shared.Widgets.Bulma
    Frontend.Garden.Plant
    Lib.Reflex.Buttons
    Lib.Reflex.Elements
    Lib.Reflex.Clicks 

  default-extensions:
    DataKinds
    FlexibleContexts
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    GADTs 
    TypeFamilies
    DerivingVia 
    RecordWildCards
    PackageImports
    ViewPatterns

  ghc-options:        -Wall -threaded -Wno-unused-do-bind

  if impl(ghcjs -any)
    ghc-options: -dedupe
    cpp-options: -DGHCJS_BROWSER

  default-language:   Haskell2010

  if os(osx)
    ghc-options: -dynamic
